--- a/DIW/U2/u2_actividad2-3_germanmartinezcagigas/index.html
+++ b/DIW/U2/u2_actividad2-3_germanmartinezcagigas/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Copiado obviamente para el background-->
+    <div class="main__bg"></div> 
+    <div class="main__bg layer1"></div> 
+    <div class="main__bg layer2"></div> 
     <!--Necesito un bloque para la imagen y otro para la lista
     el nav no deja de ser un div que se usa para el navegador asique
     no hace falta que cree otro div
